--- a/README.rdoc
+++ b/README.rdoc
@@ -53,7 +53,8 @@ At the moment documentation is... this file! :) But there are unit tests in Couc
 CouchLuceneTest.cs and there is at least one sample project showing basic usage.
 One more sample with more advanced usage is coming soon.
 Blog articles:
--One blog article[http://goran.krampe.se/blog/Divan/divan-plus-couchdb-lucene.rdoc] on how to install Couchdb-Lucene and test it with Divan.
+
+* One blog article[http://goran.krampe.se/blog/Divan/divan-plus-couchdb-lucene.rdoc] on how to install Couchdb-Lucene and test it with Divan.
 
 == Dependencies
 
